==> mhaberler/canopennode/CANopen_stack/LPC177x_8x/CO_driver.c <==
#include "FreeRTOS.h"
#include "task.h"
#include "board.h"
#include "CO_driver.h"
#include "CO_Emergency.h"
#include "IMAXEON_Config.h"
#include "CO_OD.h"
#define CAN_CTRL_NO         1
#define LPC_CAN             (LPC_CAN1)
#define LPC_CAN             (LPC_CAN2)
#define AF_LUT_USED         1
#define FULL_CAN_AF_USED        0
#define REMOVE_CAN_AF_ENTRIES    0
#define CAN_TX_MSG_STD_ID (0x200)
#define CAN_TX_MSG_REMOTE_STD_ID (0x300)
#define CAN_TX_MSG_EXT_ID (0x10000200)
#define CAN_RX_MSG_ID (0x100)

CO_ReturnError_t CO_CANmodule_init(
        CO_CANmodule_t         *CANmodule,
        uint16_t                CANbaseAddress,
        CO_CANrx_t              rxArray[],
        uint16_t                rxSize,
        CO_CANtx_t              txArray[],
        uint16_t                txSize,
        uint16_t                CANbitRate)
{
    uint16_t i;
    uint8_t nodeId=0;
    
    /* Configure object variables */
    CANmodule->CANbaseAddress = CANbaseAddress;
    CANmodule->rxArray = rxArray;
    CANmodule->rxSize = rxSize;
    CANmodule->txArray = txArray;
    CANmodule->txSize = txSize;
#if AF_LUT_USED    
    CANmodule->useCANrxFilters = (rxSize <= 32U) ? CO_true : CO_false;/* microcontroller dependent */
#else
    CANmodule->useCANrxFilters = CO_false;
#endif    
    CANmodule->bufferInhibitFlag = CO_false;
    CANmodule->firstCANtxMessage = CO_true;
    CANmodule->CANtxCount = 0U;
    CANmodule->errOld = 0U;
    CANmodule->em = NULL;

     
    DEBUGOUT("CO_CANmodule_init Baud: %d\r\n",(CANbitRate * 1000));
    
    for(i=0U; i<rxSize; i++){
        rxArray[i].ident = 0U;
        rxArray[i].pFunct = CO_CANrxMsgHandler;
    }
    for(i=0U; i<txSize; i++){
        txArray[i].bufferFull = CO_false;
    }
    /* CAN_RD2*/
    Chip_IOCON_PinMuxSet(LPC_IOCON, 0, 4, (IOCON_FUNC2 | IOCON_MODE_INACT | IOCON_DIGMODE_EN));
	/* CAN_TD2*/
    Chip_IOCON_PinMuxSet(LPC_IOCON, 0, 5, (IOCON_FUNC2 | IOCON_MODE_INACT | IOCON_DIGMODE_EN ));
   
    /* CAN_TERMINATION swapped over with nCAN_HEARTBEAT, so this pin is actually CAN_TERMINATION*/
    Chip_IOCON_PinMuxSet(LPC_IOCON, 1, 21, (IOCON_FUNC0 | IOCON_MODE_INACT ));
    Chip_GPIO_WriteDirBit(LPC_GPIO, 1, 21, true);
    Chip_GPIO_WritePortBit(LPC_GPIO, 1,21, true);
            /** CAN nCAN_HEARTBEAT LED*/
    Chip_IOCON_PinMuxSet(LPC_IOCON, CAN_RUN_LED_PORT, CAN_RUN_LED_PIN, IOCON_FUNC0);
    Chip_GPIO_WriteDirBit(LPC_GPIO, CAN_RUN_LED_PORT, CAN_RUN_LED_PIN, true);
    Chip_GPIO_WritePortBit(LPC_GPIO, CAN_RUN_LED_PORT,CAN_RUN_LED_PIN, true);
    
    Chip_IOCON_PinMuxSet(LPC_IOCON, CAN_NODE_ID_0_PORT, CAN_NODE_ID_0_PIN, (IOCON_FUNC0 | IOCON_MODE_INACT));
    Chip_GPIO_WriteDirBit(LPC_GPIO, CAN_NODE_ID_0_PORT, CAN_NODE_ID_0_PIN, false);
    Chip_IOCON_PinMuxSet(LPC_IOCON, CAN_NODE_ID_1_PORT, CAN_NODE_ID_1_PIN, (IOCON_FUNC0 | IOCON_MODE_INACT));
    Chip_GPIO_WriteDirBit(LPC_GPIO, CAN_NODE_ID_1_PORT, CAN_NODE_ID_1_PIN, false);
    Chip_IOCON_PinMuxSet(LPC_IOCON, CAN_NODE_ID_2_PORT, CAN_NODE_ID_2_PIN, (IOCON_FUNC0 | IOCON_MODE_INACT));
    Chip_GPIO_WriteDirBit(LPC_GPIO, CAN_NODE_ID_2_PORT, CAN_NODE_ID_2_PIN, false);
    Chip_IOCON_PinMuxSet(LPC_IOCON, CAN_NODE_ID_3_PORT, CAN_NODE_ID_3_PIN, (IOCON_FUNC0 | IOCON_MODE_INACT));
    Chip_GPIO_WriteDirBit(LPC_GPIO, CAN_NODE_ID_3_PORT, CAN_NODE_ID_3_PIN, false);
    Chip_IOCON_PinMuxSet(LPC_IOCON, CAN_NODE_ID_4_PORT, CAN_NODE_ID_4_PIN, (IOCON_FUNC0 | IOCON_MODE_INACT));
    Chip_GPIO_WriteDirBit(LPC_GPIO, CAN_NODE_ID_4_PORT, CAN_NODE_ID_4_PIN, false);
    
    nodeId = 0;
    nodeId |= (uint8_t)(Chip_GPIO_GetPinState(LPC_GPIO, CAN_NODE_ID_0_PORT, CAN_NODE_ID_0_PIN) ? 1: 0);
    nodeId |= (uint8_t)(Chip_GPIO_GetPinState(LPC_GPIO, CAN_NODE_ID_1_PORT, CAN_NODE_ID_1_PIN) ? (1<<1): 0);
    nodeId |= (uint8_t)(Chip_GPIO_GetPinState(LPC_GPIO, CAN_NODE_ID_2_PORT, CAN_NODE_ID_2_PIN) ? (1<<2): 0);
    nodeId |= (uint8_t)(Chip_GPIO_GetPinState(LPC_GPIO, CAN_NODE_ID_3_PORT, CAN_NODE_ID_3_PIN) ? (1<<3): 0);
    nodeId |= (uint8_t)(Chip_GPIO_GetPinState(LPC_GPIO, CAN_NODE_ID_4_PORT, CAN_NODE_ID_4_PIN) ? (1<<4): 0);

    DEBUGOUT("CO_CANmodule_init nodeId: 0x%x\r\n",nodeId);
    OD_CANNodeID = nodeId;
    
    /* Configure CAN module registers */
	Chip_CAN_Init(LPC_CAN, LPC_CANAF, LPC_CANAF_RAM);
    /* Configure CAN timing */
    /*CANbitRate Valid values are (in kbps): 10, 20, 50, 125, 250, 500, 800, 1000.*/
	Chip_CAN_SetBitRate(LPC_CAN, (CANbitRate * 1000));
    /*Local interrup enable*/
	Chip_CAN_EnableInt(LPC_CAN, CAN_IER_BITMASK);
    /* Configure CAN module hardware filters */
    if(CANmodule->useCANrxFilters){
        DEBUGOUT("\tCAN Rx Acceptance Filters ON \r\n");
#if AF_LUT_USED        
        /* CAN module filters are used, they will be configured with */
        /* CO_CANrxBufferInit() functions, called by separate CANopen */
        /* init functions. */
        /* Configure all masks so, that received message must match filter */
        SetupAFLUT();
		/*ChangeAFLUT();*/
        /* print the configured LUT*/
        PrintAFLUT();
#if FULL_CAN_AF_USED
        Chip_CAN_ConfigFullCANInt(LPC_CANAF, ENABLE);
        Chip_CAN_SetAFMode(LPC_CANAF, CAN_AF_FULL_MODE);
#else
        Chip_CAN_SetAFMode(LPC_CANAF, CAN_AF_NORMAL_MODE);
#endif /*FULL_CAN_AF_USED*/
        
#else                
        DEBUGOUT("\tCAN Rx Acceptance Filters NOT OPERATIONAL for the debug stages\r\n");
        Chip_CAN_SetAFMode(LPC_CANAF, CAN_AF_BYBASS_MODE);
#endif        
    }
    else
	{
        /* CAN module filters are not used, all messages with standard 11-bit */
        /* identifier will be received */
        /* Configure mask 0 so, that all messages with standard identifier are accepted */
        Chip_CAN_SetAFMode(LPC_CANAF, CAN_AF_BYBASS_MODE);
                
        DEBUGOUT("\tCAN Rx Acceptance Filters Bypass \r\n");
    }
    /* configure CAN interrupt registers */
    NVIC_EnableIRQ(CAN_IRQn);
    
    return CO_ERROR_NO;
}

CO_ReturnError_t CO_CANsend(CO_CANmodule_t *CANmodule, CO_CANtx_t *buffer){
    CO_ReturnError_t err = CO_ERROR_NO;
	CAN_BUFFER_ID_T   TxBuf;
    
    /* Verify overflow */
    if(buffer->bufferFull){
        if(!CANmodule->firstCANtxMessage){
            /* don't set error, if bootup message is still on buffers */
            CO_errorReport((CO_EM_t*)CANmodule->em, CO_EM_CAN_TX_OVERFLOW, CO_EMC_CAN_OVERRUN, buffer->ident);
        }
        err = CO_ERROR_TX_OVERFLOW;
    }
  
    CO_DISABLE_INTERRUPTS();
    
    /* if CAN TX buffer is free, copy message to it */
    TxBuf = Chip_CAN_GetFreeTxBuf(LPC_CAN);
    if( TxBuf < CAN_BUFFER_LAST){
        CANmodule->bufferInhibitFlag = buffer->syncFlag;
        /* copy message and txRequest */
        Chip_CAN_Send(LPC_CAN, TxBuf,(CAN_MSG_T*)buffer);
       
        /*DEBUGOUT("CO_CANsend!!!\r\n");*/
        /*PrintCANMsg((CAN_MSG_T*)buffer);*/
    }
    /* if no buffer is free, message will be sent by interrupt */
    else
    {
        DEBUGOUT("CO_CANsend buffer Full!!!\r\n");
        buffer->bufferFull = CO_true;
        CANmodule->CANtxCount++;
    }
    CO_ENABLE_INTERRUPTS();

    return err;
}

void CO_CANverifyErrors(CO_CANmodule_t *CANmodule){
    uint16_t rxErrors, txErrors, overflow;
    CO_EM_t* em = (CO_EM_t*)CANmodule->em;
    uint32_t err;

    /* get error counters from module. Id possible, function may use different way to
     * determine errors. */
    rxErrors = CAN_GSR_RXERR(Chip_CAN_GetGlobalStatus(LPC_CAN)); 
    txErrors = CAN_GSR_TXERR(Chip_CAN_GetGlobalStatus(LPC_CAN)); 
    overflow = (Chip_CAN_GetGlobalStatus(LPC_CAN) & CAN_GSR_DOS) ; /*CAN Data Overrun Status */  CANmodule->txSize;

    err = ((uint32_t)txErrors << 16) | ((uint32_t)rxErrors << 8) | overflow;

    if(CANmodule->errOld != err){
        CANmodule->errOld = err;

        if(txErrors >= 256U){                               /* bus off */
            CO_errorReport(em, CO_EM_CAN_TX_BUS_OFF, CO_EMC_BUS_OFF_RECOVERED, err);
        }
        else{                                               /* not bus off */
            CO_errorReset(em, CO_EM_CAN_TX_BUS_OFF, err);

            if((rxErrors >= 96U) || (txErrors >= 96U)){     /* bus warning */
                CO_errorReport(em, CO_EM_CAN_BUS_WARNING, CO_EMC_NO_ERROR, err);
            }

            if(rxErrors >= 128U){                           /* RX bus passive */
                CO_errorReport(em, CO_EM_CAN_RX_BUS_PASSIVE, CO_EMC_CAN_PASSIVE, err);
            }
            else{
                CO_errorReset(em, CO_EM_CAN_RX_BUS_PASSIVE, err);
            }

            if(txErrors >= 128U){                           /* TX bus passive */
                if(!CANmodule->firstCANtxMessage){
                    CO_errorReport(em, CO_EM_CAN_TX_BUS_PASSIVE, CO_EMC_CAN_PASSIVE, err);
                }
            }
            else{
                CO_bool_t isError = CO_isError(em, CO_EM_CAN_TX_BUS_PASSIVE);
                if(isError){
                    CO_errorReset(em, CO_EM_CAN_TX_BUS_PASSIVE, err);
                    CO_errorReset(em, CO_EM_CAN_TX_OVERFLOW, err);
                }
            }

            if((rxErrors < 96U) && (txErrors < 96U)){       /* no error */
                CO_errorReset(em, CO_EM_CAN_BUS_WARNING, err);
            }
        }

        if(overflow != 0U){                                 /* CAN RX bus overflow */
            CO_errorReport(em, CO_EM_CAN_RXB_OVERFLOW, CO_EMC_CAN_OVERRUN, err);
        }
    }
}

void CO_CANinterrupt(CO_CANmodule_t *CANmodule){

    uint32_t IntStatus;
	CO_CANrxMsg_t RcvMsgBuf;
    CO_CANrxMsg_t *rcvMsg;      /* pointer to received message in CAN module */
    uint16_t index;             /* index of received message */
    uint32_t rcvMsgIdent;       /* identifier of the received message */
    CO_CANrx_t *buffer = NULL;  /* receive message buffer from CO_CANmodule_t object. */
    CO_bool_t msgMatched = CO_false;
    CAN_BUFFER_ID_T   TxBuf;
                
    /*Read the int status register */
    IntStatus = Chip_CAN_GetIntStatus(LPC_CAN);

    
    /* receive interrupt */
    if(IntStatus & CAN_ICR_RI){
 
        /* get message from module */
        Chip_CAN_Receive(LPC_CAN,(CAN_MSG_T*)&RcvMsgBuf);
        rcvMsg = &RcvMsgBuf;
        rcvMsgIdent = rcvMsg->ident;
         
#if AF_LUT_USED   /*Implement once AF will be used*/
        if(CANmodule->useCANrxFilters){

			/* Since the HW not providing the filter index, ignore this code and run through the rxArray to find a match.*/
            /* Search rxArray form CANmodule for the same CAN-ID. */
            buffer = &CANmodule->rxArray[0];
             for(index = CANmodule->rxSize; index > 0U; index--){
                if(((rcvMsgIdent ^ buffer->ident) & buffer->mask) == 0U){
                    msgMatched = CO_true;
                    break;
                }
                buffer++;
            }
        }
        else
#endif            
        {
            /* CAN module filters are not used, message with any standard 11-bit identifier */
            /* has been received. Search rxArray form CANmodule for the same CAN-ID. */
            buffer = &CANmodule->rxArray[0];
            for(index = CANmodule->rxSize; index > 0U; index--){
                if(((rcvMsgIdent ^ buffer->ident) & buffer->mask) == 0U){
                    msgMatched = CO_true;
                    break;
                }
                buffer++;
            }
            
        }

        /* Call specific function, which will process the message */
        if(msgMatched && (buffer != NULL) && (buffer->pFunct != NULL)){
        
            buffer->pFunct(buffer->object, rcvMsg);
        }
		else
		{
			DEBUGOUT("Unsupported Message Received!!!\r\n");  
            PrintCANMsg((CAN_MSG_T*)rcvMsg); 
		}

        /* Clear interrupt flag */
        /*Giving the Command “Release Receive Buffer” will clear RI. done in Chip_CAN_Receive()*/
    }
    /* transmit interrupt */
    else if((IntStatus & CAN_ICR_TI1)||(IntStatus & CAN_ICR_TI2)||(IntStatus & CAN_ICR_TI3)){
        /* Clear interrupt flag */

        /* First CAN message (bootup) was sent successfully */
        CANmodule->firstCANtxMessage = CO_false;
        /* clear flag from previous message */
        CANmodule->bufferInhibitFlag = CO_false;
        /* Are there any new messages waiting to be send */
        if(CANmodule->CANtxCount > 0U){
            uint16_t i;             /* index of transmitting message */

            /* first buffer */
            CO_CANtx_t *buffer = &CANmodule->txArray[0];
            /* search through whole array of pointers to transmit message buffers. */
            for(i = CANmodule->txSize; i > 0U; i--){
                /* if message buffer is full, send it. */
                if(buffer->bufferFull){
                    buffer->bufferFull = CO_false;
                    CANmodule->CANtxCount--;

                    /* Copy message to CAN buffer */
                    CANmodule->bufferInhibitFlag = buffer->syncFlag;
                    /* canSend... */
                     /* if CAN TX buffer is free, copy message to it */
                    TxBuf = Chip_CAN_GetFreeTxBuf(LPC_CAN);
                    if( TxBuf < CAN_BUFFER_LAST){
                        CANmodule->bufferInhibitFlag = buffer->syncFlag;
                        /* copy message and txRequest */
                        Chip_CAN_Send(LPC_CAN, TxBuf,(CAN_MSG_T*)buffer);
                    }
                    break;                      /* exit for loop */
                }
                buffer++;
            }/* end of for loop */

            /* Clear counter if no more messages */
            if(i == 0U){
                CANmodule->CANtxCount = 0U;
            }
        }
    }
    else{
        /* some other interrupt reason */
    }
}
